# time-series-analysis

./: README.md  Time Series Data.pptm  outlier_pipeline.py  pyproject.toml  requirements.txt  rolling_pipeline.py  stress_test.py  usage.ipynb
data/: 4threads.csv  6threads.csv  data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data8.csv  outliers_data.csv  seasonal_daily_2025.csv  temperature_2014_18.csv  trend_daily_2025.csv
database/: init_db.py  insertion.py  outlier_io.py  rolling_io.py  schema.sql
notebooks/: data_exploration.ipynb  rolling_window_exploration.ipynb
output/: missing_handled.csv  outliers_handled.csv
output/4threads/: clean.csv  rolling.csv
output/temperature_2014_18_mean/: rolling.csv
output/temperature_2014_18_mean_750/: rolling.csv
output/temperature_2014_18_std/: rolling.csv
timeseries_module/: README_timeseries_module.md  main.py  pipeline.py
timeseries_module/missing_values/: interface.py
timeseries_module/missing_values/methods/: __init__.py  fill_backward.py  fill_forward.py  linear_interpolation.py  window_mean.py
timeseries_module/outliers/: interface.py
timeseries_module/outliers/methods/: __init__.py  interquartile_range.py  local_outlier_factor.py  regression_residuals.py  zscore.py
timeseries_module/rolling/: interface.py
timeseries_module/rolling/methods/: __init__.py  max_.py  mean.py  median.py  min_.py  quantile.py  std.py  sum.py  var.py
timeseries_toolkit/: pipeline.py  utils.py
timeseries_toolkit/strategies/: base.py  missing.py  outliers.py
