[project]
name = "timeseries-module"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.0,<2.3.0)",
    "pandas (>=2.3.1)",
    "matplotlib (>=3.10.0)",
    "seaborn (>=0.13.2)",
    "scikit-learn (>=1.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
